# maxmeiners.github.io

./: _config.yml  aboutme.md  computer_vision.md  data_visualization.md  deep_learning.md  index.html  machine_learning.md  natural_language_processing.md  projects-year-1.md  projects-year-2.md  robotics.md
Year 1 ADS&AI repositories/Block D/Group files/: pyproject.toml  requirements.txt  sklearn-0.0.post5-py3-none-any.whl
Year 1 ADS&AI repositories/Block D/Group files/EDA/: Crime_maps_by_year.ipynb  Heat_stress_map.ipynb  Nuisance_Population_Baseline_ML.ipynb  Nuisance_maps_by_year.ipynb  Population_maps_by_year.ipynb  baseline_model.ipynb  data_merge.ipynb  gi.ipynb
Year 1 ADS&AI repositories/Block D/Group files/data quality report/: anamolies.ipynb
Year 1 ADS&AI repositories/Block D/Group files/datasets/boa/: CC_2018.DBF  CC_2018.shp  CC_2019.DBF  CC_2020.shp  CC_2022.DBF
Year 1 ADS&AI repositories/Block D/Group files/datasets/green_index/: breda_grid_keys.csv
Year 1 ADS&AI repositories/Block D/Group files/datasets/heat_stress/: heat_stress_breda.gpkg
Year 1 ADS&AI repositories/Block D/Group files/deliverables/: test_homepage.py
Year 1 ADS&AI repositories/Block D/Group files/machine_learning/: final_model.py  nuisance_predictor_model.sav  test_final_model.py
Year 1 ADS&AI repositories/Block D/Group files/meetings/: Stand up_2023-05-29.vtt  Stand up_2023-05-30.vtt  stand up_2023-06-08.vtt  stand up_2023-06-09.vtt  stand up_2023-06-13.vtt  stand up_2023-06-15.vtt  stand up_2023-06-19.vtt
Year 1 ADS&AI repositories/Block D/Group files/streamlit_test/: test.py
_posts/: 2020-02-26-flake-it-till-you-make-it.md  aboutme.md  (+18 more)
(+203 files in other folders)
