[tool.poetry]
name = "group10"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
streamlit = "^1.23.1"
streamlit-folium = "^0.12.0"
streamlit-option-menu = "^0.3.6"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
shapely = "^2.0.1"
plotly = "^5.15.0"
joblib = "^1.2.0"
sklearn = "^0.0.post5"
geopandas = "^0.13.2"
scikit-learn = "^1.2.2"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
ipykernel = "^6.23.1"
openpyxl = "^3.1.2"
pytest-cov = "^4.1.0"
pytest = "^7.3.2"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv     
  | _build
  | buck-out
  | build
  | dist
)/
'''
skip-string-normalization=true
force-grid-wrap=0
use-parentheses=true